--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -26,4 +26,9 @@
         background-color: $color-grey-2;
         color: $color-grey-chateau;
     }
+
+    &--red {
+        background-color: $color-red;
+        cursor: pointer;
+    }
 }
