--- a/src/components/RestaurantInfo/RestTitle/rest-title.scss
+++ b/src/components/RestaurantInfo/RestTitle/rest-title.scss
@@ -4,6 +4,7 @@
     color: $color-blue-dark;
     font-size: $size-24;
     font-weight: 500;
+    line-height: 28px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
