--- a/src/components/Text/DescriptionGrey/description-grey.scss
+++ b/src/components/Text/DescriptionGrey/description-grey.scss
@@ -1,6 +1,12 @@
 @import '../../../styles/base/base';
 
 .description-grey {
-    color: $color-grey-6;
-    font-size: $size-16;
+    &__content {
+        color: $color-grey-6;
+        font-size: $size-16;
+    }
+
+    &__wrapper {
+        line-height: 24px;
+    }
 }
