SOUR-25-Modify EatOut page with NewRestaurantSection

--- a/src/pages/EatOut/eat-out.scss
+++ b/src/pages/EatOut/eat-out.scss
@@ -17,6 +17,7 @@
         font-size: $size-24;
         font-weight: $weight-medium;
         letter-spacing: 0.5px;
+        margin-top: 64px;
     }
 
     &__categories-section {
