SOUR-25-Create folder RestaurantSections and move all sections to it

--- a/src/components/RestaurantSections/RestaurantSection/restaurant-section.scss
+++ b/src/components/RestaurantSections/RestaurantSection/restaurant-section.scss
@@ -1,4 +1,4 @@
-@import '../../styles/base/base';
+@import '../../../styles/base/base';
 
 .restaurant-section {
     background-color: $color-porcelain;
