SOUR-25-Make category name uppercase in category page

--- a/src/pages/CategoryRestaurants/category-restaurants.scss
+++ b/src/pages/CategoryRestaurants/category-restaurants.scss
@@ -11,4 +11,8 @@
         line-height: 42px;
         margin: 0 0 30px;
     }
+
+    &__category-name {
+        text-transform: uppercase;
+    }
 }
