--- a/src/components/RestaurantsCarousel/restaurants-carousel.scss
+++ b/src/components/RestaurantsCarousel/restaurants-carousel.scss
@@ -8,12 +8,11 @@
 
 .restaurants-carousel__slide {
     flex-shrink: 0;
-    padding: 0 40px 0 0;
+    padding-right: 40px;
     transition: 400ms;
     width: 395px;
 
     @media (max-width: $breakpoint-tablet-landscape) {
-        padding: 0 40px 0 0;
         width: 612px;
     }
 
