--- a/src/components/RestaurantsCarousel/restaurants-carousel.scss
+++ b/src/components/RestaurantsCarousel/restaurants-carousel.scss
@@ -1,23 +1,47 @@
 @import '../../styles/base/base';
 
-.restaurants-carousel__slider {
-    display: inline-flex;
-    overflow: hidden;
-    width: 100%;
-}
-
-.restaurants-carousel__slide {
-    flex-shrink: 0;
-    padding-right: 40px;
-    transition: 400ms;
-    width: 395px;
-
-    @media (max-width: $breakpoint-tablet-landscape) {
-        width: 612px;
+.restaurants-carousel {
+    &__buttons {
+        position: absolute;
+        right: 0;
+        transform: translateY(-50px);
     }
 
-    @media (max-width: $breakpoint-tablet) {
-        padding: 0;
+    &__button {
+        align-items: center;
+        background: $color-white;
+        border: 1px solid $color-grey-3;
+        border-radius: 5px 0 0 5px;
+        box-sizing: border-box;
+        display: inline-flex;
+        height: 25px;
+        justify-content: center;
+        width: 25px;
+
+        &--right {
+            transform: rotate(180deg);
+        }
+    }
+
+    &__slider {
+        display: inline-flex;
+        overflow: hidden;
         width: 100%;
+    }
+
+    &__slide {
+        flex-shrink: 0;
+        padding-right: 40px;
+        transition: 400ms;
+        width: 395px;
+
+        @media (max-width: $breakpoint-tablet-landscape) {
+            width: 612px;
+        }
+
+        @media (max-width: $breakpoint-tablet) {
+            padding: 0;
+            width: 100%;
+        }
     }
 }
