--- a/src/components/RestaurantCards/RestaurantBigCard/restaurant-big-card.scss
+++ b/src/components/RestaurantCards/RestaurantBigCard/restaurant-big-card.scss
@@ -13,7 +13,7 @@
         color: $color-slate-grey;
         display: -webkit-box;
         font-weight: 400;
-        height: 72px;
+        min-height: 72px;
         line-height: 1.5;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -25,7 +25,7 @@
 
         &--expanded {
             display: inline-block;
-            height: auto;
+            min-height: 72px;
             overflow: visible;
         }
     }
