feat/SOUR-16-eat-out-hero-slider fix style naming

--- a/src/components/RestaurantInfo/RestTitle/rest-title.scss
+++ b/src/components/RestaurantInfo/RestTitle/rest-title.scss
@@ -3,8 +3,7 @@
 .title {
     color: $color-blue-dark;
     font-size: $size-24;
-    font-weight: 500;
-    line-height: 28px;
+    font-weight: $weight-medium;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
