--- a/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
+++ b/src/components/RestaurantCards/RestaurantCard/restaurant-card.scss
@@ -67,6 +67,11 @@
         padding: 0 16px;
     }
 
+    &__link {
+        overflow: hidden;
+        text-decoration: none;
+    }
+
     &__hours {
         padding-left: 16px;
     }
