fix buttons bug

--- a/src/components/RestaurantsCarousel/restaurants-carousel.scss
+++ b/src/components/RestaurantsCarousel/restaurants-carousel.scss
@@ -1,6 +1,8 @@
 @import '../../styles/base/base';
 
 .restaurants-carousel {
+    position: relative;
+
     &__buttons {
         position: absolute;
         right: 0;
