--- a/src/components/CategoryCard/category-card.scss
+++ b/src/components/CategoryCard/category-card.scss
@@ -11,10 +11,6 @@
     justify-content: center;
     line-height: $size-22;
 
-    &__container {
-        @include flex-space-between;
-    }
-
     &__info {
         display: flex;
         flex-direction: column;
@@ -47,32 +43,31 @@
     }
 
     &__link {
+        @include flex-space-between;
         text-decoration: none;
     }
 }
 
-.test {
-    @include flex-space-between;
-}
-
 @media (max-width: $breakpoint-laptop) {
     .card-wrapper {
-        flex-direction: column-reverse;
         height: calc(100% - 50px);
+        justify-content: flex-end;
 
         &__info {
             align-items: center;
-            overflow: visible;
-            padding: 0;
-            transform: translate(0, -30%);
+            padding: 10px;
         }
 
         &__icon {
-            transform: translate(0, -15%);
+            transform: translate(0);
         }
 
         &__name {
             font-weight: $size-20;
+        }
+
+        &__link {
+            flex-direction: column-reverse;
         }
     }
 }
