SOUR-90-Remove rating width

--- a/src/components/Rating/rating.scss
+++ b/src/components/Rating/rating.scss
@@ -21,7 +21,7 @@
     $_this: &;
     display: flex;
     justify-content: flex-end;
-    width: 145px;
+    // width: 145px;
 
     &__input {
         display: none;
