--- a/src/components/CardContainer/card-container.scss
+++ b/src/components/CardContainer/card-container.scss
@@ -7,4 +7,10 @@
     &--shadow {
         box-shadow: 0 2px 6px $transperent-black-25;
     }
+
+    &--colored {
+        background-color: $color-porcelain;
+        border-radius: 5px;
+        box-shadow: 0 2px 6px $transperent-black-25;
+    }
 }
