--- a/src/components/CategoryCard/category-card.scss
+++ b/src/components/CategoryCard/category-card.scss
@@ -4,7 +4,7 @@
 .card-wrapper {
     background: $color-alabaster;
     border-radius: 8px;
-    box-shadow: 0 8px 23px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 8px 23px $transperent-black-25;
     display: flex;
     flex-direction: column;
     height: 96px;
