SOUR-88 fix line height value

--- a/src/components/CategoryCard/category-card.scss
+++ b/src/components/CategoryCard/category-card.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     height: 96px;
     justify-content: center;
-    line-height: $size-22;
+    line-height: 1.2;
 
     &__info {
         display: flex;
