SOUR-94-Add mixin and size variable

--- a/src/styles/mixins/_mixins.scss
+++ b/src/styles/mixins/_mixins.scss
@@ -17,6 +17,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
 @mixin flex-center {
     align-items: center;
     display: flex;
@@ -27,4 +28,10 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
+}
+
+@mixin flex-center-column {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
