SOUR-94-Add style class to restTitle

--- a/src/components/RestaurantInfo/RestTitle/rest-title.scss
+++ b/src/components/RestaurantInfo/RestTitle/rest-title.scss
@@ -7,4 +7,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+
+    &--bigger {
+        font-size: $size-48;
+        font-weight: $weight-bold;
+    }
 }
