--- a/src/components/Breadcrumbs/breadcrumbs.scss
+++ b/src/components/Breadcrumbs/breadcrumbs.scss
@@ -15,6 +15,8 @@
     font-size: $size-12;
     font-weight: 500;
     max-width: 100%;
+    position: relative;
+    z-index: $z-index-timeline;
 
     &__list {
         margin-top: 35px;
