--- a/src/components/RestaurantInteractionsBanner/restaurant-interactions-banner.scss
+++ b/src/components/RestaurantInteractionsBanner/restaurant-interactions-banner.scss
@@ -25,4 +25,24 @@
         line-height: 1.15;
         text-transform: uppercase;
     }
+
+    @media (max-width: $breakpoint-tablet) {
+        &__banner-flex {
+            height: 120px;
+        }
+
+        &__check-in-textbox {
+            text-align: center;
+            width: 40%;
+        }
+
+        &__rating-heart,
+        &__link-button {
+            @include flex-center-column;
+        }
+
+        &__heart-button-box {
+            padding: 10px 0 0;
+        }
+    }
 }
