--- a/src/components/InformationSection/InformationCard/information-card.scss
+++ b/src/components/InformationSection/InformationCard/information-card.scss
@@ -15,14 +15,14 @@
         color: $color-grey-7;
         font-size: $size-20;
         font-weight: $weight-medium;
-        line-height: $size-24;
+        line-height: 1.2;
     }
 
     &__description {
         color: $color-grey-6;
         font-size: $size-14;
         font-weight: $weight-bold;
-        line-height: $size-24;
+        line-height: 1.2;
         text-transform: uppercase;
     }
 
