add logic for future filter functions, make side filter component reusable for books page

--- a/src/pages/ReservationsPage/reservations.scss
+++ b/src/pages/ReservationsPage/reservations.scss
@@ -7,6 +7,6 @@
 
     &__side-filters {
         margin: 0 40px 0 0;
-        width: 285px;
+        width: 285px; // while no other section styles
     }
 }
