Build the information section layout

--- a/src/pages/RestaurantPage/restaurant-page.scss
+++ b/src/pages/RestaurantPage/restaurant-page.scss
@@ -15,4 +15,25 @@
         letter-spacing: 0.5px;
         line-height: 1.2;
     }
+
+    &__about-restaurant {
+        column-gap: $column-gap-small;
+        display: grid;
+        grid-template-areas:
+            'information information reviews'
+            'location location reviews';
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    &__information {
+        grid-area: information;
+    }
+
+    &__location {
+        grid-area: location;
+    }
+
+    &__reviews {
+        grid-area: reviews;
+    }
 }
