create first responsive list, add to Button component font family property

--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -6,6 +6,7 @@
     border-radius: 65px;
     color: $color-white;
     cursor: pointer;
+    font-family: $main-font;
     height: 40px;
     padding: 8px 24px;
     text-transform: uppercase;
