--- a/src/components/Reviews/review.scss
+++ b/src/components/Reviews/review.scss
@@ -1,4 +1,5 @@
 @import '../../styles/base/base';
+@import '../../styles/mixins/index';
 
 .review {
     margin: 20px 0;
@@ -24,11 +25,9 @@
     }
 
     &__rating {
-        align-items: center;
+        @include flex-center;
         background-color: $color-yellow;
         border-radius: 0 8px;
-        display: flex;
-        justify-content: center;
         padding: 5px 10px;
         position: absolute;
         right: 0;
