SOUR-95-Add margin to similar restaurants

--- a/src/pages/RestaurantPage/restaurant-page.scss
+++ b/src/pages/RestaurantPage/restaurant-page.scss
@@ -9,6 +9,10 @@
         margin-bottom: 64px;
     }
 
+    &__similar-restaurants {
+        margin-top: 64px;
+    }
+
     &__heading {
         color: $color-midnight;
         font-weight: $weight-medium;
