Build Reviews Modal Build Modal functionality (open, close) Build Dynamic reviews section

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,6 +5,7 @@
 $z-index-base: 1;
 $z-index-higher: 2;
 $z-index-timeline: 100;
+$z-index-modal: 1000;
 
 $breakpoint-tablet: 768px;
 $breakpoint-tablet-landscape: 1024px;
