--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -12,6 +12,7 @@ $color-midnight: #001836;
 $color-mirage: #1f2d3d;
 $color-pickled-bluewood: #31465e;
 $color-porcelain: #f6f7f8;
+$color-purple-heart: #5836cc;
 $color-regent-gray: #8492a6;
 $color-silver: #c4c4c4;
 $color-slate-grey: #6a7889;
