SOUR-99-Add super-bold variable

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -12,6 +12,7 @@ $size-24: 24px;
 $size-36: 36px;
 $size-48: 48px;
 
+$weight-super-bold: 900;
 $weight-bold: 700;
 $weight-medium: 500;
 $weight-regular: 400;
