--- a/src/components/ListSection/list-section.scss
+++ b/src/components/ListSection/list-section.scss
@@ -4,6 +4,7 @@
     transform: translateY(-44px);
 
     &__results {
+        align-items: center;
         display: flex;
         font-size: $size-20;
         font-weight: $weight-medium;
@@ -11,8 +12,17 @@
         margin: 0 0 20px;
     }
 
-    &__categories {
+    &__result-text {
+        flex-shrink: 0;
+    }
+
+    &__search-results {
+        flex-shrink: 0;
         font-style: italic;
+        margin: 0 0 0 15px;
+    }
+
+    &__filter-item {
         margin: 0 0 0 15px;
     }
 }
