fix web console errors

--- a/src/components/XButtonForReservations/x-button.scss
+++ b/src/components/XButtonForReservations/x-button.scss
@@ -2,7 +2,7 @@
 
 .x-filter-button {
     align-items: center;
-    background: transparent;
+    background: $color-white;
     border: 1px solid $color-grey-4;
     border-radius: 8px;
     box-sizing: border-box;
