--- a/src/components/SideFilters/SideFilterCard/FilterOption/filter-option.scss
+++ b/src/components/SideFilters/SideFilterCard/FilterOption/filter-option.scss
@@ -17,6 +17,7 @@
     &__custom {
         border: 1px solid $color-grey-4;
         border-radius: 5px;
+        cursor: pointer;
         height: 15px;
         left: 0;
         position: absolute;
@@ -25,6 +26,7 @@
     }
 
     &__check {
+        cursor: pointer;
         left: 3px;
         opacity: 0;
         position: absolute;
@@ -34,6 +36,7 @@
 
     &__text {
         color: $color-fiord;
+        cursor: pointer;
         font-size: $size-14;
         margin: 0 0 0 15px;
     }
