--- a/src/components/ListSection/ListItemCard/list-item-card.scss
+++ b/src/components/ListSection/ListItemCard/list-item-card.scss
@@ -50,6 +50,11 @@
             margin: 0 0 0 10px;
         }
 
+        #{$this}__quantity {
+            color: $color-grey-8;
+            text-transform: uppercase;
+        }
+
         #{$this}__rating {
             display: flex;
             justify-content: flex-start;
