--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -46,9 +46,7 @@
     }
 
     &__head {
-        align-items: center;
-        display: flex;
-        justify-content: space-between;
+        @include flex-space-between;
     }
 
     &__close-button {
