--- a/src/components/Rating/rating.scss
+++ b/src/components/Rating/rating.scss
@@ -25,8 +25,14 @@
 
     &__input {
         display: none;
-        //visibility: visible !important;
-        //opacity: 0 !important;
+        // visibility: visible !important;
+        // //opacity: 0 !important;
+    }
+
+    button {
+        background-color: $transparent;
+        border: 0;
+        padding: 0;
     }
 
     &__star {
@@ -69,4 +75,8 @@
             margin-left: 1px;
         }
     }
+}
+
+.fifth-rating-height {
+    margin-top: 153px;
 }
