bug/SOUR-56-fix-rating-tab-and-input-check add hover, make component accesible for keyboard users, fix tabbing

--- a/src/components/Rating/rating.scss
+++ b/src/components/Rating/rating.scss
@@ -21,11 +21,10 @@
     $_this: &;
     display: flex;
     justify-content: flex-end;
+    width: 145px;
 
     &__input {
         display: none;
-        // visibility: visible !important;
-        // //opacity: 0 !important;
     }
 
     button {
