Build Search function in reservations page Move required props higher in components Add Search button

--- a/src/components/SearchSection/SearchBar/search-bar.scss
+++ b/src/components/SearchSection/SearchBar/search-bar.scss
@@ -9,6 +9,7 @@
     border: 1px solid $color-ghost;
     border-radius: 5px;
     display: flex;
+    flex-grow: 1;
     padding: 13px 16px;
     position: relative;
 
