--- a/src/components/SearchSection/search-section.scss
+++ b/src/components/SearchSection/search-section.scss
@@ -16,4 +16,26 @@ $_size-large: 32px;
         display: flex;
         margin: 25px 0;
     }
+
+    &__search-bar-section {
+        align-items: center;
+        column-gap: $column-gap-small;
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+    }
+
+    &__search-button {
+        align-items: center;
+        display: flex;
+        font-size: $size-16;
+    }
+
+    &__search-button-icon {
+        padding-right: 5px;
+
+        path {
+            stroke: $color-white;
+        }
+    }
 }
