--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -16,6 +16,7 @@ $color-regent-gray: #8492a6;
 $color-silver: #c4c4c4;
 $color-slate-grey: #6a7889;
 $color-ghost: #cacfd5;
+$color-iron: #dcdfe3;
 
 $color-blue-dark: #001836;
 $color-grey-8: #627485;
