--- a/src/components/Link/link.scss
+++ b/src/components/Link/link.scss
@@ -1,23 +1,17 @@
 @import '../../styles/base/base';
 
 .link {
+    background: none;
+    border: none;
     color: $color-link;
     cursor: pointer;
     font-size: $size-14;
     font-weight: $weight-regular;
     height: 40px;
     line-height: 1.7;
-    padding: 8px 16px 0;
+    padding: 8px 16px;
     text-decoration: none;
     text-transform: uppercase;
-
-    &:link {
-        color: $color-link;
-    }
-
-    &:visited {
-        color: $color-link-visited;
-    }
 
     &:hover,
     &:active,
