--- a/src/components/RestaurantInfo/RestWebAddress/rest-web-address.scss
+++ b/src/components/RestaurantInfo/RestWebAddress/rest-web-address.scss
@@ -12,5 +12,15 @@
         margin: 6px 0;
         padding-left: 10px;
         text-transform: uppercase;
+
+        &--link {
+            color: $color-fiord;
+            cursor: pointer;
+            text-decoration: none;
+
+            &:hover {
+                color: $color-regent-gray;
+            }
+        }
     }
 }
