Fixate position of header Fixate position of navigation

--- a/src/components/Breadcrumbs/breadcrumbs.scss
+++ b/src/components/Breadcrumbs/breadcrumbs.scss
@@ -16,7 +16,7 @@
     font-weight: 500;
     max-width: 100%;
     position: relative;
-    z-index: $z-index-timeline;
+    z-index: $z-index-higher;
 
     &__list {
         margin-top: 35px;
