--- a/src/components/mainLayout/layoutComponents/Header/header.scss
+++ b/src/components/mainLayout/layoutComponents/Header/header.scss
@@ -1,8 +1,17 @@
+@import '../../../../styles/base/base';
+@import '../../../../styles/base/colors';
+
 .header {
     align-items: center;
+    background-color: $color-white;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: row-reverse;
-    height: 100%;
+    height: 100px;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    z-index: $z-index-higher + 1;
 
     &__profile-widget {
         margin: 0 40px 0 0;
