--- a/src/components/mainLayout/layoutComponents/Navbar/MainNavigation/mainNavigation.scss
+++ b/src/components/mainLayout/layoutComponents/Navbar/MainNavigation/mainNavigation.scss
@@ -70,22 +70,22 @@ $transparent: transparent;
                         transparent 94%,
                         transparent 100%
                     )
-                    top 1px right 0/0px 45px,
-                linear-gradient(0deg, transparent 70%, transparent 70%) top 1px
+                    top 0 right 0/0px 45px,
+                linear-gradient(0deg, transparent 70%, transparent 70%) top 0
                     right 0/0px 45px,
                 radial-gradient(
                         100% 70% at bottom right,
                         transparent 97%,
                         transparent 100%
                     )
-                    top 1px right 0/0px 45px,
+                    top 0 right 0/0px 45px,
                 radial-gradient(
                         100% 30% at bottom left,
                         transparent 97%,
                         transparent 100%
                     )
-                    top 45px right 0/0px 45px,
-                linear-gradient(0deg, transparent 30%, transparent 30%) top 45px
+                    top 44px right 0/0px 45px,
+                linear-gradient(0deg, transparent 30%, transparent 30%) top 44px
                     right 0/0px 45px,
                 radial-gradient(
                         100% 70% at top right,
@@ -102,29 +102,29 @@ $transparent: transparent;
                         transparent 94%,
                         transparent 100%
                     )
-                    top 1px right 0/0px 45px,
-                linear-gradient(0deg, transparent 70%, transparent 70%) top 1px
+                    top 0 right 0/0px 45px,
+                linear-gradient(0deg, transparent 70%, transparent 70%) top 0
                     right 0/0px 45px,
                 radial-gradient(
                         100% 70% at bottom right,
                         transparent 97%,
                         transparent 100%
                     )
-                    top 1px right 0/0px 45px,
+                    top 0 right 0/0px 45px,
                 radial-gradient(
                         100% 30% at bottom left,
                         transparent 97%,
                         transparent 100%
                     )
-                    top 45px right 0/0px 45px,
-                linear-gradient(0deg, transparent 30%, transparent 30%) top 45px
+                    top 44px right 0/0px 45px,
+                linear-gradient(0deg, transparent 30%, transparent 30%) top 44px
                     right 0/0px 45px,
                 radial-gradient(
                         100% 70% at top right,
                         transparent 97%,
                         transparent 100%
                     )
-                    top 45px right 0/0px 45px;
+                    top 44px right 0/0px 45px;
             background-repeat: no-repeat;
         }
     }
@@ -136,29 +136,29 @@ $transparent: transparent;
                         transparent 94%,
                         $color-grey-1 100%
                     )
-                    top 1px right 0/18px 45px,
-                linear-gradient(0deg, $color-grey-1 70%, transparent 70%) top
-                    1px right 17px/29px 45px,
+                    top 0 right 0/18px 45px,
+                linear-gradient(0deg, $color-grey-1 70%, transparent 70%) top 0
+                    right 17px/29px 45px,
                 radial-gradient(
                         100% 70% at bottom right,
-                        $color-grey-1 98%,
+                        $color-grey-1 99%,
                         transparent 100%
                     )
-                    top 1px right 45px/29px 45px,
+                    top 0 right 45px/29px 45px,
                 radial-gradient(
                         100% 30% at bottom left,
-                        transparent 98%,
+                        transparent 99%,
                         $color-grey-1 100%
                     )
-                    top 45px right 0/18px 45px,
+                    top 44px right 0/18px 45px,
                 linear-gradient(0deg, transparent 30%, $color-grey-1 30%) top
-                    45px right 17px/29px 45px,
+                    44px right 17px/29px 45px,
                 radial-gradient(
                         100% 70% at top right,
-                        $color-grey-1 98%,
+                        $color-grey-1 99%,
                         transparent 100%
                     )
-                    top 45px right 45px/29px 45px;
+                    top 44px right 45px/29px 45px;
             background-repeat: no-repeat;
         }
 
@@ -168,29 +168,29 @@ $transparent: transparent;
                         transparent 94%,
                         $color-grey-1 100%
                     )
-                    top 1px right 0/18px 45px,
-                linear-gradient(0deg, $color-grey-1 70%, transparent 70%) top
-                    1px right 17px/139px 45px,
+                    top 0 right 0/18px 45px,
+                linear-gradient(0deg, $color-grey-1 70%, transparent 70%) top 0
+                    right 17px/139px 45px,
                 radial-gradient(
                         100% 70% at bottom right,
-                        $color-grey-1 97%,
+                        $color-grey-1 98%,
                         transparent 100%
                     )
-                    top 1px right 154px/29px 45px,
+                    top 0 right 154px/29px 45px,
                 radial-gradient(
                         100% 30% at bottom left,
-                        transparent 97%,
+                        transparent 99%,
                         $color-grey-1 100%
                     )
-                    top 45px right 0/18px 45px,
+                    top 44px right 0/18px 45px,
                 linear-gradient(0deg, transparent 30%, $color-grey-1 30%) top
-                    45px right 17px/139px 45px,
+                    44px right 17px/139px 45px,
                 radial-gradient(
                         100% 70% at top right,
-                        $color-grey-1 97%,
+                        $color-grey-1 99%,
                         transparent 100%
                     )
-                    top 45px right 154px/29px 45px;
+                    top 44px right 154px/29px 45px;
             background-repeat: no-repeat;
         }
     }
@@ -240,29 +240,29 @@ $transparent: transparent;
                         transparent 94%,
                         $color-hover-purple 100%
                     )
-                    top 1px right 0/18px 45px,
+                    top 0 right 0/18px 45px,
                 linear-gradient(0deg, $color-hover-purple 70%, transparent 70%)
-                    top 1px right 17px/29px 45px,
+                    top 0 right 17px/29px 45px,
                 radial-gradient(
                         100% 70% at bottom right,
-                        $color-hover-purple 97%,
+                        $color-hover-purple 98%,
                         transparent 100%
                     )
-                    top 1px right 44px/29px 45px,
+                    top 0 right 45px/29px 45px,
                 radial-gradient(
                         100% 30% at bottom left,
-                        transparent 97%,
+                        transparent 98%,
                         $color-hover-purple 100%
                     )
-                    top 45px right 0/18px 45px,
+                    top 44px right 0/18px 45px,
                 linear-gradient(0deg, transparent 30%, $color-hover-purple 30%)
-                    top 45px right 17px/29px 45px,
+                    top 44px right 17px/29px 45px,
                 radial-gradient(
                         100% 70% at top right,
-                        $color-hover-purple 97%,
+                        $color-hover-purple 98%,
                         transparent 100%
                     )
-                    top 45px right 44px/29px 45px;
+                    top 44px right 45px/29px 45px;
             background-repeat: no-repeat;
         }
 
@@ -272,29 +272,29 @@ $transparent: transparent;
                         transparent 94%,
                         $color-hover-purple 100%
                     )
-                    top 1px right 0/18px 45px,
+                    top 0 right 0/18px 45px,
                 linear-gradient(0deg, $color-hover-purple 70%, transparent 70%)
-                    top 1px right 17px/139px 45px,
+                    top 0 right 17px/139px 45px,
                 radial-gradient(
                         100% 70% at bottom right,
-                        $color-hover-purple 97%,
+                        $color-hover-purple 98%,
                         transparent 100%
                     )
-                    top 1px right 154px/29px 45px,
+                    top 0 right 154px/29px 45px,
                 radial-gradient(
                         100% 30% at bottom left,
                         transparent 97%,
                         $color-hover-purple 100%
                     )
-                    top 45px right 0/18px 45px,
+                    top 44px right 0/18px 45px,
                 linear-gradient(0deg, transparent 30%, $color-hover-purple 30%)
-                    top 45px right 17px/139px 45px,
+                    top 44px right 17px/139px 45px,
                 radial-gradient(
                         100% 70% at top right,
-                        $color-hover-purple 97%,
+                        $color-hover-purple 98%,
                         transparent 100%
                     )
-                    top 45px right 154px/29px 45px;
+                    top 44px right 154px/29px 45px;
             background-repeat: no-repeat;
         }
 
