--- a/src/components/SideFilters/SideFilterCard/side-filter-card.scss
+++ b/src/components/SideFilters/SideFilterCard/side-filter-card.scss
@@ -20,5 +20,11 @@
 
     &__content {
         padding: 15px 0 5px;
+
+        @media (max-width: 1024px) {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr;
+        }
     }
 }
