SOUR-123 border: none changed to border: 0 in Link and PaginationButton

--- a/src/components/Link/link.scss
+++ b/src/components/Link/link.scss
@@ -2,7 +2,7 @@
 
 .link {
     background: none;
-    border: none;
+    border: 0;
     color: $color-link;
     cursor: pointer;
     font-size: $size-14;
