--- a/src/components/PaginationButton/pagination-button.scss
+++ b/src/components/PaginationButton/pagination-button.scss
@@ -24,7 +24,7 @@
 
         &--active {
             background-color: $color-electric-violet;
-            border: none;
+            border: 0;
             color: $color-white;
             font-size: $size-14;
             font-weight: $weight-black;
