SOUR-124 fix search components aligment: wrap all filters into one section, add grid to filters section

--- a/src/components/SearchSection/DatePicker/date-picker.scss
+++ b/src/components/SearchSection/DatePicker/date-picker.scss
@@ -8,13 +8,7 @@ $_color-bold: #050504;
     flex-direction: column;
     font-family: $main-font;
     font-size: $size-14;
-
-    &__header {
-        color: $color-grey-chateau;
-        font-weight: $weight-bold;
-        margin-bottom: 10px;
-        text-transform: uppercase;
-    }
+    grid-row-start: 2;
 }
 
 .react-date-picker {
