SOUR-128 fix responsiveness when in tablet viewport - add breakpoint, display two category cards in a row

--- a/src/components/RestaurantCategories/restaurant-categories.scss
+++ b/src/components/RestaurantCategories/restaurant-categories.scss
@@ -13,4 +13,9 @@
         margin: 0;
         padding-top: 60px;
     }
+
+    @media (max-width: $breakpoint-tablet) {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: $column-gap-small;
+    }
 }
