SOUR-110 change log out link color

--- a/src/components/UserProfile/user-profile.scss
+++ b/src/components/UserProfile/user-profile.scss
@@ -85,6 +85,7 @@
         margin: 0 0 0 8px;
 
         a {
+            color: $color-grey-7;
             text-decoration: none;
         }
     }
