--- a/src/components/PaginationButton/pagination-button.scss
+++ b/src/components/PaginationButton/pagination-button.scss
@@ -8,6 +8,7 @@
         border: 1px solid $color-grey-3;
         border-radius: 5px;
         cursor: pointer;
+        font-family: $main-font;
         height: 32px;
         margin-right: 16px;
         width: 32px;
