--- a/src/components/RestaurantCategories/restaurant-categories.scss
+++ b/src/components/RestaurantCategories/restaurant-categories.scss
@@ -3,7 +3,7 @@
 .restaurant-categories {
     column-gap: 70px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     margin: 30px 30px 70px 0;
     row-gap: 60px;
 
