SOUR-132 add tablet media query to search section, display search section elements in lines instead of grid

--- a/src/components/SearchSection/DatePicker/date-picker.scss
+++ b/src/components/SearchSection/DatePicker/date-picker.scss
@@ -9,6 +9,10 @@ $_color-bold: #050504;
     font-family: $main-font;
     font-size: $size-14;
     grid-row-start: 2;
+
+    @media (max-width: $breakpoint-tablet) {
+        order: 4;
+    }
 }
 
 .react-date-picker {
