--- a/src/components/SearchSection/search-section.scss
+++ b/src/components/SearchSection/search-section.scss
@@ -38,4 +38,8 @@ $_size-large: 32px;
             stroke: $color-white;
         }
     }
+
+    @media (max-width: 1024px) {
+        margin-bottom: 50px;
+    }
 }
