--- a/src/components/SideFilters/SideFilterCard/side-filter-card.scss
+++ b/src/components/SideFilters/SideFilterCard/side-filter-card.scss
@@ -22,6 +22,7 @@
         padding: 15px 0 5px;
 
         @media (max-width: 1024px) {
+            column-gap: 10px;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: 1fr;
